--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "ReactNativeUI",
-    "slug": "ReactNativeUI",
+    "name": "Xplorify",
+    "slug": "Xplorify",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
